# realtime-crypto

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
crypto/: api.py  urls.py
crypto-realtime-prices/: __init__.py  api.py  urls.py
crypto-realtime-prices/models/: coin.py
crypto/models/: coin.py  crypto_websocket.py  statistic.py  types.py
realtime_crypto/: __init__.py  api.py
realtime_crypto/models/: __init__.py
src/: __init__.py  api.py  urls.py
src/models/: coin.py  crypto_websocket.py  websocket_details.py
src/realtime_crypto/: __init__.py
src/realtime_crypto/models/: coin.py  crypto_websocket.py
